@@ -22,14 +22,10 @@
 #SOLR_JAVA_HOME=""
 
 # This controls the number of seconds that the solr script will wait for
-# Solr to stop gracefully. If the graceful stop fails, the script will
-# forcibly stop Solr.
+# Solr to stop gracefully or Solr to start.  If the graceful stop fails,
+# the script will forcibly stop Solr.  If the start fails, the script will
+# give up waiting and display the last few lines of the logfile.
 #SOLR_STOP_WAIT="180"
-
-# This controls the number of seconds that the solr script will wait for
-# Solr to start. If the start fails, the script will give up waiting and
-# display the last few lines of the logfile.
-#SOLR_START_WAIT="$SOLR_STOP_WAIT"
 
 # Increase Java Heap as needed to support your indexing / query needs
 #SOLR_HEAP="512m"
@@ -50,31 +46,15 @@
 #  -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+PrintTenuringDistribution -XX:+PrintGCApplicationStoppedTime"
 
 # These GC settings have shown to work well for a number of common Solr workloads
-#GC_TUNE=" \
-#-XX:+ExplicitGCInvokesConcurrent \
-#-XX:SurvivorRatio=4 \
-#-XX:TargetSurvivorRatio=90 \
-#-XX:MaxTenuringThreshold=8 \
-#-XX:+UseConcMarkSweepGC \
-#-XX:ConcGCThreads=4 -XX:ParallelGCThreads=4 \
-#-XX:+CMSScavengeBeforeRemark \
-#-XX:PretenureSizeThreshold=64m \
-#-XX:+UseCMSInitiatingOccupancyOnly \
-#-XX:CMSInitiatingOccupancyFraction=50 \
-#-XX:CMSMaxAbortablePrecleanTime=6000 \
-#-XX:+CMSParallelRemarkEnabled \
-#-XX:+ParallelRefProcEnabled        etc.
+#GC_TUNE="-XX:NewRatio=3 -XX:SurvivorRatio=4    etc.
 
 # Set the ZooKeeper connection string if using an external ZooKeeper ensemble
 # e.g. host1:2181,host2:2181/chroot
 # Leave empty if not using SolrCloud
 #ZK_HOST=""
 
-# Set to true if your ZK host has a chroot path, and you want to create it automatically.
-#ZK_CREATE_CHROOT=true
-
 # Set the ZooKeeper client timeout (for SolrCloud mode)
-#ZK_CLIENT_TIMEOUT="30000"
+#ZK_CLIENT_TIMEOUT="15000"
 
 # By default the start script uses "localhost"; override the hostname here
 # for production SolrCloud environments to control the hostname exposed to cluster state
@@ -82,12 +62,6 @@
 
 # By default Solr will try to connect to Zookeeper with 30 seconds in timeout; override the timeout if needed
 #SOLR_WAIT_FOR_ZK="30"
-
-# By default Solr will log a warning for cores that are not registered in Zookeeper at startup
-# but otherwise ignore them. This protects against misconfiguration (e.g. connecting to the
-# wrong Zookeeper instance or chroot), however you need to manually delete the cores if
-# they are no longer required. Set to "true" to have Solr automatically delete unknown cores.
-#SOLR_DELETE_UNKNOWN_CORES=false
 
 # By default the start script uses UTC; override the timezone if needed
 #SOLR_TIMEZONE="UTC"
@@ -102,13 +76,10 @@
 
 # Anything you add to the SOLR_OPTS variable will be included in the java
 # start command line as-is, in ADDITION to other options. If you specify the
-# --jvm-opts option on start script, those options will be appended as well. Examples:
+# -a option on start script, those options will be appended as well. Examples:
 #SOLR_OPTS="$SOLR_OPTS -Dsolr.autoSoftCommit.maxTime=3000"
 #SOLR_OPTS="$SOLR_OPTS -Dsolr.autoCommit.maxTime=60000"
-
-# Most properties have an environment variable equivalent.
-# A naming convention is that SOLR_FOO_BAR maps to solr.foo.bar
-#SOLR_CLUSTERING_ENABLED=true
+#SOLR_OPTS="$SOLR_OPTS -Dsolr.clustering.enabled=true"
 
 # Location where the bin/solr script will save PID files for running instances
 # If not set, the script will create PID files in $SOLR_TIP/bin
@@ -134,55 +105,33 @@
 # Location where Solr should write logs to. Absolute or relative to solr start dir
 #SOLR_LOGS_DIR=logs
 
-# Enables jetty request log for all requests
-#SOLR_REQUESTLOG_ENABLED=true
+# Enables log rotation before starting Solr. Setting SOLR_LOG_PRESTART_ROTATION=true will let Solr take care of pre
+# start rotation of logs. This is false by default as log4j2 handles this for us. If you choose to use another log
+# framework that cannot do startup rotation, you may want to enable this to let Solr rotate logs on startup.
+#SOLR_LOG_PRESTART_ROTATION=false
 
 # Sets the port Solr binds to, default is 8983
 #SOLR_PORT=8983
-
-# Restrict access to solr by IP address.
-# Specify a comma-separated list of addresses or networks, for example:
-#   127.0.0.1, 192.168.0.0/24, [::1], [2000:123:4:5::]/64
-#SOLR_IP_ALLOWLIST=
-
-# Block access to solr from specific IP addresses.
-# Specify a comma-separated list of addresses or networks, for example:
-#   127.0.0.1, 192.168.0.0/24, [::1], [2000:123:4:5::]/64
-#SOLR_IP_DENYLIST=
-
-# Sets the network interface the Solr binds to. To prevent administrators from
-# accidentally exposing Solr more widely than intended, this defaults to 127.0.0.1.
-# Administrators should think carefully about their deployment environment and
-# set this value as narrowly as required before going to production. In
-# environments where security is not a concern, 0.0.0.0 can be used to allow
-# Solr to accept connections on all network interfaces.
-SOLR_JETTY_HOST="0.0.0.0"
-# Sets the network interface the Embedded ZK binds to.
-#SOLR_ZK_EMBEDDED_HOST="127.0.0.1"
 
 # Enables HTTPS. It is implictly true if you set SOLR_SSL_KEY_STORE. Use this config
 # to enable https module with custom jetty configuration.
 #SOLR_SSL_ENABLED=true
 # Uncomment to set SSL-related system properties
 # Be sure to update the paths to the correct keystore for your environment
-#SOLR_SSL_KEY_STORE=etc/solr-ssl.keystore.p12
+#SOLR_SSL_KEY_STORE=etc/solr-ssl.keystore.jks
 #SOLR_SSL_KEY_STORE_PASSWORD=secret
-#SOLR_SSL_TRUST_STORE=etc/solr-ssl.keystore.p12
+#SOLR_SSL_TRUST_STORE=etc/solr-ssl.keystore.jks
 #SOLR_SSL_TRUST_STORE_PASSWORD=secret
 # Require clients to authenticate
 #SOLR_SSL_NEED_CLIENT_AUTH=false
 # Enable clients to authenticate (but not require)
 #SOLR_SSL_WANT_CLIENT_AUTH=false
-# Verify client's hostname during SSL handshake
-#SOLR_SSL_CLIENT_HOSTNAME_VERIFICATION=false
 # SSL Certificates contain host/ip "peer name" information that is validated by default. Setting
-# this to false can be useful to disable these checks when re-using a certificate on many hosts.
-# This will also be used for the default value of whether SNI Host checking should be enabled.
+# this to false can be useful to disable these checks when re-using a certificate on many hosts
 #SOLR_SSL_CHECK_PEER_NAME=true
 # Override Key/Trust Store types if necessary
-#SOLR_SSL_KEY_STORE_TYPE=PKCS12
-#SOLR_SSL_TRUST_STORE_TYPE=PKCS12
-#SOLR_SSL_RELOAD_ENABLED=true
+#SOLR_SSL_KEY_STORE_TYPE=JKS
+#SOLR_SSL_TRUST_STORE_TYPE=JKS
 
 # Uncomment if you want to override previously defined SSL values for HTTP client
 # otherwise keep them commented and the above values will automatically be set for HTTP clients
@@ -212,26 +161,12 @@ SOLR_JETTY_HOST="0.0.0.0"
 #SOLR_AUTHENTICATION_OPTS="-Dbasicauth=solr:SolrRocks"
 
 # Settings for ZK ACL
-#SOLR_ZK_CREDS_AND_ACLS="-DzkACLProvider=org.apache.solr.common.cloud.DigestZkACLProvider \
-#  -DzkCredentialsProvider=org.apache.solr.common.cloud.DigestZkCredentialsProvider \
-#  -DzkCredentialsInjector=org.apache.solr.common.cloud.VMParamsZkCredentialsInjector \
+#SOLR_ZK_CREDS_AND_ACLS="-DzkACLProvider=org.apache.solr.common.cloud.VMParamsAllAndReadonlyDigestZkACLProvider \
+#  -DzkCredentialsProvider=org.apache.solr.common.cloud.VMParamsSingleSetCredentialsDigestZkCredentialsProvider \
 #  -DzkDigestUsername=admin-user -DzkDigestPassword=CHANGEME-ADMIN-PASSWORD \
 #  -DzkDigestReadonlyUsername=readonly-user -DzkDigestReadonlyPassword=CHANGEME-READONLY-PASSWORD"
 #SOLR_OPTS="$SOLR_OPTS $SOLR_ZK_CREDS_AND_ACLS"
 
-# optionally, you can use using a a Java properties file 'zkDigestCredentialsFile'
-#...
-#   -DzkDigestCredentialsFile=/path/to/zkDigestCredentialsFile.properties
-#...
-
-# Use a custom injector to inject ZK credentials into DigestZkACLProvider
-# -DzkCredentialsInjector expects a class implementing org.apache.solr.common.cloud.ZkCredentialsInjector
-# ...
-#   -DzkCredentialsInjector=fully.qualified.class.CustomInjectorClassName"
-# ...
-
-# Jetty GZIP module enabled by default
-#SOLR_GZIP_ENABLED=true
 
 # Settings for common system values that may cause operational imparement when system defaults are used.
 # Solr can use many processes and many file handles. On modern operating systems the savings by leaving
@@ -244,61 +179,7 @@ SOLR_JETTY_HOST="0.0.0.0"
 #SOLR_ULIMIT_CHECKS=
 
 # When running Solr in non-cloud mode and if planning to do distributed search (using the "shards" parameter), the
-# list of hosts needs to be defined in an allow-list or Solr will forbid the request. The allow-list can be configured
-# in solr.xml, or if you are using the OOTB solr.xml, can be specified using the system property "solr.allowUrls".
-# Alternatively host checking can be disabled by using the system property "solr.disable.allowUrls"
-#SOLR_OPTS="$SOLR_OPTS -Dsolr.allowUrls=http://localhost:8983,http://localhost:8984"
-
-# For a visual indication in the Admin UI of what type of environment this cluster is, configure
-# a -Dsolr.environment property below. Valid values are prod, stage, test, dev, with an optional
-# label or color, e.g. -Dsolr.environment=test,label=Functional+test,color=brown
-#SOLR_OPTS="$SOLR_OPTS -Dsolr.environment=prod"
-
-# Specifies the path to a common library directory that will be shared across all cores.
-# Any JAR files in this directory will be added to the search path for Solr plugins.
-# If the specified path is not absolute, it will be relative to `$SOLR_HOME`.
-#SOLR_OPTS="$SOLR_OPTS -Dsolr.sharedLib=/path/to/lib"
-
-# Runs solr in java security manager sandbox. This can protect against some attacks.
-# Runtime properties are passed to the security policy file (server/etc/security.policy)
-# You can also tweak via standard JDK files such as ~/.java.policy, see https://s.apache.org/java8policy
-# This is experimental! It may not work at all with Hadoop/HDFS features.
-#SOLR_SECURITY_MANAGER_ENABLED=true
-# This variable provides you with the option to disable the Admin UI. if you uncomment the variable below and
-# change the value to true. The option is configured as a system property as defined in SOLR_START_OPTS in the start
-# scripts.
-# SOLR_ADMIN_UI_DISABLED=false
-
-# Solr is by default allowed to read and write data from/to SOLR_HOME and a few other well defined locations
-# Sometimes it may be necessary to place a core or a backup on a different location or a different disk
-# This parameter lets you specify file system path(s) to explicitly allow. The special value of '*' will allow any path
-#SOLR_OPTS="$SOLR_OPTS -Dsolr.allowPaths=/mnt/bigdisk,/other/path"
-
-# Solr can attempt to take a heap dump on out of memory errors. To enable this, uncomment the line setting
-# SOLR_HEAP_DUMP below. Heap dumps will be saved to SOLR_LOG_DIR/dumps by default. Alternatively, you can specify any
-# other directory, which will implicitly enable heap dumping. Dump name pattern will be solr-[timestamp]-pid[###].hprof
-# When using this feature, it is recommended to have an external service monitoring the given dir.
-# If more fine grained control is required, you can manually add the appropriate flags to SOLR_OPTS
-# See https://docs.oracle.com/en/java/javase/11/troubleshoot/command-line-options1.html
-# You can test this behavior by setting SOLR_HEAP=25m
-#SOLR_HEAP_DUMP=true
-#SOLR_HEAP_DUMP_DIR=/var/log/dumps
-
-# Before version 9.0, Solr required a copy of solr.xml file in $SOLR_HOME. Now Solr will use a default file if not found.
-# To restore the old behavior, set the variable below to true
-#SOLR_SOLRXML_REQUIRED=false
-
-# Some previous versions of Solr use an outdated log4j dependency. If you are unable to use at least log4j version 2.15.0
-# then enable the following setting to address CVE-2021-44228
-# SOLR_OPTS="$SOLR_OPTS -Dlog4j2.formatMsgNoLookups=true"
-
-# The bundled plugins in the "modules" folder can easily be enabled as a comma-separated list in SOLR_MODULES variable
-# SOLR_MODULES=extraction,ltr
-
-# Configure the default replica placement plugin to use if one is not configured in cluster properties
-# See https://solr.apache.org/guide/solr/latest/configuration-guide/replica-placement-plugins.html for details
-#SOLR_PLACEMENTPLUGIN_DEFAULT=simple
-
-# Solr internally doesn't use cookies other than for modules such as Kerberos/Hadoop Auth. If you don't need any of those
-# And you don't need them for an external system (such as a load balancer), you can disable the use of a CookieStore with:
-# SOLR_OPTS="$SOLR_OPTS -Dsolr.http.disableCookies=true"
+# list of hosts needs to be whitelisted or Solr will forbid the request. The whitelist can be configured in solr.xml,
+# or if you are using the OOTB solr.xml, can be specified using the system property "solr.shardsWhitelist". Alternatively
+# host checking can be disabled by using the system property "solr.disable.shardsWhitelist"
+#SOLR_OPTS="$SOLR_OPTS -Dsolr.shardsWhitelist=http://localhost:8983,http://localhost:8984"
